--- a/src/Frontend/styles/Banner.css
+++ b/src/Frontend/styles/Banner.css
@@ -25,6 +25,7 @@
     position: absolute;
     top: -39%;
     bottom: 0;
+    left: 88%;
     z-index: 1;
     display: flex;
     align-items: center;
@@ -33,11 +34,9 @@
     padding: 0;
     color: #fff;
     text-align: center;
-    background: 0 0;
     border: 0;
     opacity: .5;
     transition: opacity .15s ease;
-    left: 88%;
 }
 @media only screen and (min-width: 768px) {
     .banner-slider {
@@ -46,5 +45,15 @@
         top: -115px;
         z-index: -1;
         max-height: 33rem;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .carousel-control-next, .carousel-control-prev {
+        top: 0;
+        bottom: 0;
+        left: 87%;
+        width: 15%;
+        opacity: .5;
     }
 }
