--- a/src/Frontend/styles/Branches.css
+++ b/src/Frontend/styles/Branches.css
@@ -28,3 +28,11 @@
     background: #C6C6C6;
     border: 1px solid #C6C6C6;
   }
+
+  @media only screen and (max-width: 767px) {
+    .modal-dialog-scrollable .modal-content {
+        max-height: 100%;
+        max-width: 100%;
+    }
+}
+
