--- a/src/index.css
+++ b/src/index.css
@@ -44,11 +44,19 @@ a {
 .font-48 {
   font-size: 48px;
 }
-
+.border-round {
+  border: 1px solid #EA4715;
+  padding: 5px;
+  border-radius: 50px;
+}
 .btn-orange {
   background-color: #EA4715;
   color: #fff;
   border-radius: 5px;
+}
+
+.text-orange{
+  color: #EA4715;;
 }
 
 .btn-back {
